# hft-market-making-2026

./: .gitignore  README.md
cmake/: ThirdPartyLibs.cmake
config/: base.cfg  sample_backtest.cfg
config/strategies/: avellaneda_stoikov.yaml  avellaneda_stoikov_microprice.yaml  inventory_market_maker.yaml
data/sample/: lob.csv  trades.csv
docs/: backtester.md
reports/: a_s.md  a_s_microprice.md  python_base_report.md  python_sample_report.md  sample_report.md
scripts/: run_python_backtest.sh
src/: CMakeLists.txt
src/backtest/: CMakeLists.txt
src/backtest/core/: BacktestEngine.cpp  BacktestEngine.hpp  LimitOrderBook.cpp  LimitOrderBook.hpp  ProgressPrinter.cpp  ProgressPrinter.hpp  SimulatedExchange.cpp  SimulatedExchange.hpp  Strategy.cpp  Strategy.hpp
src/backtest/io/: MarketData.cpp  MarketData.hpp
src/backtest/strategy/: InventoryMarketMaker.cpp  InventoryMarketMaker.hpp
src/main/: CMakeLists.txt  main.cpp
src/python/: CMakeLists.txt  PyBacktester.cpp
strategies/: avellaneda_stoikov.py  avellaneda_stoikov_microprice.py  inventory_market_maker.py  strategy_app.py
test/: BacktestEngineTest.cpp  CMakeLists.txt  MarketDataTest.cpp  PythonApiSmokeTest.py  PythonAvellanedaStoikovMicropriceTest.py  PythonAvellanedaStoikovTest.py  SimulatedExchangeTest.cpp
